# trait-practice

./: Cargo.toml  README.md
src/: main.rs  other.rs  terminal.rs
src/js_map/: version_1.rs  version_2.rs
src/object/: version_1.rs  version_2.rs
src/terminal/: mod.rs  reward.rs  version_1.rs
